# danbooru-tag-ontology-graph

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  backlog.md  prompt_recommendation.md  reproducibility.md
docs/domain_labels/: blue_archive_character_domains.json
reports/: academic_report_draft.md  phase4_semantic_topology.md  research_outline.md
src/danbooru_graph/: __init__.py  cli.py  community.py  constants.py  embeddings.py  etl.py  evaluation.py  pairs.py  query.py  recommendation.py  scoring.py  sparse_edges.py  visualization.py
tests/: test_cli.py  test_community.py  test_embeddings.py  test_etl.py  test_evaluation.py  test_pipeline.py  test_query.py  test_recommendation.py  test_visualization.py
