[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "danbooru-graph"
version = "0.1.0"
description = "Danbooru metadata tag co-occurrence and PPMI graph mining."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "gensim>=4.3",
    "numpy>=1.26",
    "networkx>=3.2",
    "polars>=1.0",
    "pyarrow>=15.0",
    "scipy>=1.12",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
danbooru-graph = "danbooru_graph.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
